prevent self link broken into lines

--- a/assets/dfn-panel.css
+++ b/assets/dfn-panel.css
@@ -27,6 +27,9 @@ dfn {
 .dfn-panel a[href] {
   color: black;
 }
+.dfn-panel a[href].self-link {
+  display: inline-block;
+}
 .dfn-panel a:not(:hover) {
   text-decoration: none !important;
   border-bottom: none !important;
